--- a/index.yaml
+++ b/index.yaml
@@ -9,6 +9,6 @@ entries:
     name: nginx
     type: application
     urls:
-    - helm-chart/nginx-0.1.0.tgz
+    - nginx-0.1.0.tgz
     version: 0.1.0
 generated: "2025-12-17T20:47:49.543054-06:00"
